--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="css/fontawesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -276,7 +277,7 @@
 		<div class="row justify-content-around myrow sale">
 			<div class="col-lg-4 col-md-4 col-sm-4 mycol mycol2">
 				<div class="g1">
-					<img src="clothes/top/2.jpg" class="g1">
+					<img src="accessory/f1.jpg" class="g1">
 				</div>
 				<div class="redblock">
 					Sale 30%
@@ -284,7 +285,7 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 mycol mycol2">
 				<div class="g1">
-					<img src="clothes/top/2.jpg" class="g1">
+					<img src="accessory/f2.jpg" class="g1">
 				</div>
 				<div class="redblock">
 					Sale 30%
@@ -292,7 +293,7 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 mycol mycol2">
 				<div class="g1">
-					<img src="clothes/top/2.jpg" class="g1">
+					<img src="accessory/f3.jpg" class="g1">
 				</div>
 				<div class="redblock">
 					Sale 30%
